--- a/pom.xml
+++ b/pom.xml
@@ -30,13 +30,13 @@
 
     <properties>
         <mockito-core.version>1.10.19</mockito-core.version>
-        <apache-commons-lang3.version>3.3.2</apache-commons-lang3.version>
-        <google-guava.version>18.0</google-guava.version>
+        <apache-commons-lang3.version>3.18.0</apache-commons-lang3.version>
+        <google-guava.version>32.0.1-android</google-guava.version>
         <junit.version>4.13.1</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
-        <gson.version>2.3.1</gson.version>
-        <log4j.version>2.13.3</log4j.version>
-        <apache-commons-io.version>2.4</apache-commons-io.version>
+        <gson.version>2.8.9</gson.version>
+        <log4j.version>2.17.1</log4j.version>
+        <apache-commons-io.version>2.14.0</apache-commons-io.version>
         <joda-time.version>2.8.2</joda-time.version>
         <spring-test.version>4.2.1.RELEASE</spring-test.version>
         <takari-cpsuite.version>1.2.7</takari-cpsuite.version>
